<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">TaskManager</string>

    <!-- MAIN ACTIVITY -->
    <string name="el1" tools:ignore="Typos">el1</string>
    <string name="add_a_task">Add a task</string>
    <string name="priority">priority</string>
    <string name="until">Until…</string>
    <string name="order">Order</string>
    <string name="empty"> </string>
    <string name="day">Day</string>
    <string name="periods">Periods</string>
    <string name="search">Search</string>

    <!-- ADD/MODIFY ACTIVITY -->
    <string name="title_label">Title:</string>
    <string name="details_label">Details:</string>
    <string name="date_label">Date:</string>
    <string name="date_hint">dd/MM/yyyy</string>
    <string name="priority_label">Priority:</string>
    <string name="recurring_label">Recurring:</string>
    <string name="add_button_label">SAVE</string>
    <string name="modify_button_label">SAVE</string>
    <string name="delete_button_label">DELETE</string>
    <string name="delete_dialog_title">Are you sure you want to delete the task?</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="cancel_dialog">Cancel</string>

    <!-- PERIOD TYPE -->
    <string name="_late_task">Late tasks</string>
    <string name="_3_days">3 days</string>
    <string name="_1_week">1 week</string>
    <string name="_2_weeks">2 weeks</string>
    <string name="_1_month">1 month</string>
    <string name="_3_months">3 months</string>
    <string name="_6_months">6 months</string>
    <string name="_1_year">1 year</string>

    <!-- ORDER TYPE -->
    <string name="date_order">Date</string>
    <string name="priority_order">Priority</string>

    <!-- PRIORITY TYPE -->
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="low">Low</string>

    <!-- RECURRING TYPE -->
    <string name="none">None</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>

    <!-- NOTIFICATION CHANNEL -->
    <string name="channel_name">Task Manager Notification</string>
    <string name="channel_description">Channel notification</string>

    <!-- EXAMPLES -->
    <string name="example_title_item">Title</string>
    <string name="example_details_item">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed do eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullamco laboriosam, nisi ut aliquid ex ea commodi consequatur. Duis aute irure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="example_price_item">2500 €</string>
    <string name="example_date_item">Venerdì 23 Giugno 2023</string>
    <string name="recurring_label_text">Recurring:</string>
    <string name="priority_label_text">Priority:</string>
    <string name="until_recurring_label">Until:</string>
    <string name="notification_label">Notification:</string>
    <string name="none_hint">NONE</string>
    <string name="time_label">Time:</string>
    <string name="time_none">Time: NONE</string>
    <string name="date_none">Date: NONE</string>
    <string name="until_none">Until: NONE</string>

    <!-- WEEK DAYS -->
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="date_example">03/08/2024 00:00</string>
    <string name="recurring_example">Yearly</string>
    <string name="calendar">Calendar</string>
    <string name="_1_day">Tomorrow</string>

</resources>
