<?xml version="1.0" encoding="utf-8"?>
<com.example.taskmanager.view_item.CalendarRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:background="@color/gray_huge"
    app:layout_constraintTop_toBottomOf="@id/linear_date">

    <com.example.taskmanager.view_item.CalendarSingleDay
        android:id="@+id/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/gray_very_huge"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_lite"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@string/monday"
            android:maxLines="1"
            android:layout_gravity="center_horizontal">
        </TextView>
    </com.example.taskmanager.view_item.CalendarSingleDay>

    <com.example.taskmanager.view_item.CalendarSingleDay
        android:id="@+id/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/gray_very_huge"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_lite"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@string/tuesday"
            android:maxLines="1"
            android:layout_gravity="center_horizontal">
        </TextView>
    </com.example.taskmanager.view_item.CalendarSingleDay>

    <com.example.taskmanager.view_item.CalendarSingleDay
        android:id="@+id/wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/gray_very_huge"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_lite"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@string/wednesday"
            android:maxLines="1"
            android:layout_gravity="center_horizontal">
        </TextView>
    </com.example.taskmanager.view_item.CalendarSingleDay>

    <com.example.taskmanager.view_item.CalendarSingleDay
        android:id="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/gray_very_huge"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_lite"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@string/thursday"
            android:maxLines="1"
            android:layout_gravity="center_horizontal">
        </TextView>
    </com.example.taskmanager.view_item.CalendarSingleDay>

    <com.example.taskmanager.view_item.CalendarSingleDay
        android:id="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/gray_very_huge"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_lite"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@string/friday"
            android:maxLines="1"
            android:layout_gravity="center_horizontal">
        </TextView>
    </com.example.taskmanager.view_item.CalendarSingleDay>

    <com.example.taskmanager.view_item.CalendarSingleDay
        android:id="@+id/saturday"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="@color/gray_very_huge"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_lite"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@string/saturday"
            android:maxLines="1"
            android:layout_gravity="center_horizontal">
        </TextView>
    </com.example.taskmanager.view_item.CalendarSingleDay>

    <com.example.taskmanager.view_item.CalendarSingleDay
        android:id="@+id/sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/gray_very_huge"
        android:layout_margin="2dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_lite"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:text="@string/sunday"
            android:maxLines="1"
            android:layout_gravity="center_horizontal">
        </TextView>
    </com.example.taskmanager.view_item.CalendarSingleDay>

</com.example.taskmanager.view_item.CalendarRow>
