<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:backgroundTint="@color/gray_very_huge"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/list_item_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/priority"
                        android:layout_margin="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/circle_green" />

                    <TextView
                        android:id="@+id/list_item_text_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/white"
                        android:text="@string/example_title_item"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/list_item_text_rec"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_weight="3"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/recurring_example"
                        android:textStyle="italic"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/list_item_text_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:maxWidth="40dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:padding="8dp"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/white"
                        android:text="@string/example_details_item"
                        android:textStyle="italic"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/list_item_text_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:ellipsize="end"
                        android:layout_weight="1"
                        android:maxLines="1"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:padding="12dp"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/white"
                        android:text="@string/example_date_item"
                        android:textStyle="italic"/>

                    <TextView
                        android:id="@+id/list_item_text_alarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:maxLines="2"
                        android:layout_weight="2"
                        android:layout_marginStart="2dp"
                        android:padding="8dp"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        android:text="@string/date_example"
                        android:textStyle="italic"/>

                    <ImageView
                        android:id="@+id/alarm"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:contentDescription="@string/priority"
                        android:layout_gravity="center"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginTop="4dp"
                        android:padding="2dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/alarm_on" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

</LinearLayout>
